test/corpus/literals.txt
================================================================================
True
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (mapping
    (expression
      (value
        (literal
          (trueLiteral))))))

================================================================================
False
================================================================================
false
--------------------------------------------------------------------------------

(source_file
  (mapping
    (expression
      (value
        (literal
          (falseLiteral))))))

================================================================================
Null
================================================================================
null
--------------------------------------------------------------------------------

(source_file
  (mapping
    (expression
      (value
        (literal
          (nullLiteral))))))

================================================================================
Identifier
================================================================================

hello2

--------------------------------------------------------------------------------

(source_file
  (mapping
    (expression
      (value
        (nameIdentifier)))))

================================================================================
Mapping
================================================================================

fun f() = 2

---

3

--------------------------------------------------------------------------------

(source_file
  (mapping
    (header
      (directive))
    body: (expression
      (value
        (literal
          (numberLiteral
            integer: (integer)))))))

================================================================================
Incomplete
================================================================================

(a: String) -> [

--------------------------------------------------------------------------------

(source_file
  (mapping
    (expression
      (value
        (lambdaLiteral
          (lambdaParameters
            (parameter
              (nameIdentifier)
              (typeExpression
                (typeReferenceLiteral
                  (fullyQualifiedName
                    (nameIdentifier))))))
          (expression
            (value
              (array
                (MISSING "]")))))))))
