test/corpus/testDirectives.txt
================================================================================
shoki version_directive
================================================================================

%dw 2.0

--------------------------------------------------------------------------------

(source_file
  (module
    (header
      (versionDirective
        (numberLiteral
          (integer)
          (frac))))))

================================================================================
shoki var directive
================================================================================

var a = 12
--------------------------------------------------------------------------------

(source_file
  (module
    (header
      (varDirective
        (nameIdentifier)
        (value
          (numberLiteral
            (integer)))))))

================================================================================
shoki function directive
================================================================================

fun myFun() = 12

--------------------------------------------------------------------------------

(source_file
  (module
    (header
      (functionDirective
        (nameIdentifier)
        (value
          (numberLiteral
            (integer)))))))

================================================================================
shoki output directive with mimeType
================================================================================

output application/json

--------------------------------------------------------------------------------

(source_file
  (module
    (header
      (outputDirective
        (mimeType)))))

================================================================================
shoki output directive with writerId
================================================================================

output json

--------------------------------------------------------------------------------

(source_file
  (module
    (header
      (outputDirective
        (writerId)))))

================================================================================
shoki output directive with writerId and mimetype
================================================================================

output json with application/json

--------------------------------------------------------------------------------

(source_file
  (module
    (header
      (outputDirective
        (writerIdWithMime
          (writerId)
          (mimeType))))))
