test/corpus/testShoki.txt
================================================================================
shoki True
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (mapping
    (value
      (selectableValues
        (nonNumberliteral
          (trueLiteral))))))

================================================================================
shoki False
================================================================================
false
--------------------------------------------------------------------------------

(source_file
  (mapping
    (value
      (selectableValues
        (nonNumberliteral
          (falseLiteral))))))

================================================================================
shoki Null
================================================================================
null
--------------------------------------------------------------------------------

(source_file
  (mapping
    (value
      (selectableValues
        (nonNumberliteral
          (nullLiteral))))))

================================================================================
shoki Identifier
================================================================================

hello2

--------------------------------------------------------------------------------

(source_file
  (mapping
    (value
      (selectableValues
        (nameIdentifier)))))

================================================================================
shoki Mapping
================================================================================

fun f() = 2

---

3

--------------------------------------------------------------------------------

(source_file
  (mapping
    header: (header
      (functionDirective
        (nameIdentifier)
        (value
          (numberLiteral
            (integer)))))
    body: (value
      (numberLiteral
        (integer)))))

================================================================================
shoki Incomplete
================================================================================

(a: String) -> [1

--------------------------------------------------------------------------------

(source_file
  (mapping
    (value
      (lambdaLiteral
        (lambdaParameters
          (parameter
            (nameIdentifier)
            (typeExpression
              (typeReferenceLiteral
                (fullyQualifiedName
                  (nameIdentifier))))))
        (value
          (selectableValues
            (array
              (value
                (numberLiteral
                  (integer)))
              (MISSING "]"))))))))

================================================================================
shoki Incomplete2
================================================================================

[ 1, 2, 3

--------------------------------------------------------------------------------

(source_file
  (mapping
    (value
      (selectableValues
        (array
          (value
            (numberLiteral
              (integer)))
          (value
            (numberLiteral
              (integer)))
          (value
            (numberLiteral
              (integer)))
          (MISSING "]"))))))

================================================================================
shoki Minus expression
================================================================================

-23
--------------------------------------------------------------------------------

(source_file
  (mapping
    (unary_expression
      (value
        (numberLiteral
          (integer))))))

================================================================================
shoki Negated_expression
================================================================================

! true
--------------------------------------------------------------------------------

(source_file
  (mapping
    (unary_expression
      (value
        (selectableValues
          (nonNumberliteral
            (trueLiteral)))))))

================================================================================
shoki Not_expression
================================================================================

not false
--------------------------------------------------------------------------------

(source_file
  (mapping
    (unary_expression
      (value
        (selectableValues
          (nonNumberliteral
            (falseLiteral)))))))

================================================================================
shoki IF/else
================================================================================

if (not true) 24 else 2

--------------------------------------------------------------------------------

(source_file
  (mapping
    (unary_expression
      (unary_expression
        (value
          (selectableValues
            (nonNumberliteral
              (trueLiteral)))))
      (value
        (numberLiteral
          (integer)))
      (value
        (numberLiteral
          (integer))))))

================================================================================
shoki module (no body)
================================================================================

var a = 12

--------------------------------------------------------------------------------

(source_file
  (module
    (header
      (varDirective
        (nameIdentifier)
        (value
          (numberLiteral
            (integer)))))))
